--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Steph Wan Codes</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script> <script src="main.js"></script>
+
+</head>
+<body>
+    <div class="demo">
+        <img class="logo" src="img/sw_logo_s.png"/>
+        <img class="logo" src="img/sw_logo_w.png"/>
+        <img class="logo" src="img/sw_logo_dot.png"/>
+    </div>
+</body>
+</html>
