--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
     <title>Steph Wan Codes</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script> <script src="main.js"></script>
-
 </head>
 <body>
-    <div class="demo">
-        <img class="logo" src="img/sw_logo_s.png"/>
-        <img class="logo" src="img/sw_logo_w.png"/>
-        <img class="logo" src="img/sw_logo_dot.png"/>
+    <div class="container">
+        <div class="s">
+            <img src="img/sw_logo_s.png" width="250">
+        </div>
+        <div class="w">
+            <img src="img/sw_logo_w.png" width="280" />
+        </div>
+        <div class="dot">
+            <img src="img/sw_logo_dot.png" width="30" />
+        </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
