--- a/index.html
+++ b/index.html
@@ -24,41 +24,35 @@
         </nav>
     </header>
     <main class="full-screen" id="greetings" role="main">
-        <section class="full-screen blue" id="start"><div id="greet-title">Greetings</div></section>
-        <section class="full-screen orange" id="story">
+        <section class="full-screen" id="start">
+            <div id="greet-title">Greetings
+                <br>
+            <img class="photo" src="img/photo.JPG" width="180"></div>
+        </section>
+        <section class="full-screen" id="story">
             <div id="p-container">
-                <p> Hi I'm </p>
-                <div class="s">
-                    <img src="img/sw_logo_s.png" width="40">
-                </div>
-                <p>tephanie</p>
-                <div class="w">
-                    <img src="img/sw_logo_w.png" width="60" />
-                </div>
-                <p>an.</p>
+                <p> Hi I'm
+                    <img class="s" src="img/sw_logo_s.png" width="40">
+                tephanie
+                    <img class="w" src="img/sw_logo_w.png" width="60" />
+                an.</p>
+                <br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae metus ut mauris interdum elementum eu ac elit. 
                 <!-- <div class="dot">
                     <img src="img/sw_logo_dot.png" width="10" />
                 </div> -->
             </div>
         </section>
-        <section class="full-screen red" id="work">
+        <section class="full-screen" id="work">
             <div>Design <br><br> Development</div>
         </section>
-        <section class="full-screen blue" id="abilities">
+        <section class="full-screen" id="abilities">
             <div>Abilities</div>
         </section>
         <section class="full-screen" id="next">
             <div>Next Steps</div>
         </section>
     </main>
-
-    <!-- <script src="js/gsap/TweenMax.min.js"></script> -->
-    <!-- <script src="js/jquery.min.js"></script> -->
-    <!-- should be replaced with minified version when development is finished -->
-    <!-- <script src="js/jquery.scrollmagic.js"></script> -->
-    <!-- should be removed when development is finished -->
-    <!-- <script src="js/jquery.scrollmagic.debug.js"></script> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
