Changed logo corners and added colors

--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
 </head>
 <body>
     <header role="banner">
-        <div class="logo-container">
+        <div class="header-container">
+            <nav class="anchor-nav" role='navigation'>
+                <a href="#greetings" id="greetings-anchor"></a>
+                <a href="#story" id="story-anchor">story</a>
+                <a href="#work" id="work-anchor">work</a>
+                <a href="#abilities" id="abilities-anchor">abilities</a>
+                <a href="#next" id="next-anchor">next steps</a>
+            </nav>
             <div class="sw">
                 <img src="img/sw_logo_sw.png" width="120">
             </div>
             <div class="dot">
                 <img src="img/sw_logo_dot.png" width="15" />
             </div>
+
         </div>
-        <nav class="anchor-nav" role='navigation'>
-            <a href="#greetings" id="greetings-anchor"></a>
-            <a href="#story" id="story-anchor">story</a>
-            <a href="#work" id="work-anchor">work</a>
-            <a href="#abilities" id="abilities-anchor">abilities</a>
-            <a href="#next" id="next-anchor">next steps</a>
-        </nav>
     </header>
     <main class="full-screen" id="greetings" role="main">
         <section class="full-screen" id="start">
