Added Abilities, 2projects

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Steph Wan Codes</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" type="text/css" href="/styles/fonts/fonts.css" />
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 </head>
 <body>
     <header role="banner">
@@ -28,27 +29,74 @@
         <section class="full-screen" id="start">
             <div id="greet-title">Greetings
                 <br>
-            <img class="photo" src="img/photo.JPG" width="180"></div>
+            <img class="photo" src="img/photo.JPG" width="180">
+            <div><span class="down-arrow">↓</span></div>
+        </div>
         </section>
         <section class="full-screen" id="story">
             <div id="p-container">
-                <p> Hi I'm
-                    <img class="s" src="img/sw_logo_s.png" width="40">
-                tephanie
-                    <img class="w" src="img/sw_logo_w.png" width="60" />
-                an.</p>
-                <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae metus ut mauris interdum elementum eu ac elit. 
-                <!-- <div class="dot">
-                    <img src="img/sw_logo_dot.png" width="10" />
-                </div> -->
+                <div class="arrow-up"></div>
+                <div id="summary-quote">
+                    <p class="typewriter"> Hi! I'm
+                        <img class="s" src="img/sw_logo_s.png" width="25" />
+                    tephanie
+                        <img class="w" src="img/sw_logo_w.png" width="40" />
+                    an.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae metus ut mauris interdum elementum eu ac elit. 
+                    <!-- <div class="dot">
+                        <img src="img/sw_logo_dot.png" width="10" />
+                    </div> -->
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae metus ut mauris interdum elementum eu ac elit. 
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae metus ut mauris interdum elementum eu ac elit. 
+                </div>
             </div>
         </section>
         <section class="full-screen" id="work">
-            <div>Design <br><br> Development</div>
+            <div class="dev-title">
+                Development
+            </div>
+            <div>
+                <a href="http://rocketstothemoon.com" target="_blank">
+                    <img src="img/rttm.png" width="500"  />
+                </a>
+                <div></div>
+                <a href="http://clearlifemagazine.com" target="_blank">
+                    <img src="img/clm_shop.png" width="500" />
+                </a>
+            </div>
         </section>
         <section class="full-screen" id="abilities">
-            <div>Abilities</div>
+            <div class="abilities-title">Abilities</div>
+            <div class="devicons">
+                <h3 class="toolbox">Toolbox</h3>
+                    <i class="devicon-html5-plain-wordmark"></i>
+                    <i class="devicon-css3-plain-wordmark"></i>
+                    <i class="devicon-bootstrap-plain-wordmark"></i>
+                    <i class="devicon-foundation-plain-wordmark"></i>
+                    <i class="devicon-sass-original"></i>
+                    <i class="devicon-javascript-plain"></i>
+                    <i class="devicon-jquery-plain-wordmark"></i>
+                    <br>
+                    <i class="devicon-nodejs-plain-wordmark"></i>
+                    <i class="devicon-express-original-wordmark"></i>
+                    <i class="devicon-react-original-wordmark"></i>
+                    
+                    <i class="devicon-git-plain-wordmark"></i>
+                    <i class="devicon-github-plain-wordmark"></i>
+                    <i class="devicon-heroku-original-wordmark"></i>
+                    
+                    <i class="devicon-wordpress-plain-wordmark"></i>
+                    <i class="devicon-php-plain"></i>
+                <h3 class="db">Databases</h3>
+                    <i class="devicon-mongodb-plain-wordmark"></i>
+                    <i class="devicon-postgresql-plain-wordmark"></i>
+                <h3 class="db">OS</h3>
+                    <i class="devicon-linux-plain"></i>
+                    <i class="devicon-ubuntu-plain-wordmark"></i>
+                <h3 class="db">Adobe Suite</h3>
+                    <i class="devicon-illustrator-line"></i>
+                    <i class="devicon-photoshop-line"></i>
+            </div>
         </section>
         <section class="full-screen" id="next">
             <div>Next Steps</div>
