Added fontawesome and icons + text to next steps section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" type="text/css" href="/styles/fonts/fonts.css" />
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 <body>
     <header role="banner">
@@ -100,6 +101,14 @@
         </section>
         <section class="full-screen" id="next">
             <div>Next Steps</div>
+            <div>
+            <p>Thanks for dropping by! I'm currently looking for full-time opportunities as a front-end UI developer in Toronto. 
+            Let's chat about how we can work together. Connect with me on Linkedin or send me an email! </p>
+                <a href="https://www.linkedin.com/in/steph-wan/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/anotherwan"><i class="fab fa-github"></i></a>
+                <i class="fas fa-map-marker">Toronto, Canada</i>
+               <i class="fas fa-at">stephhwwan@gmail.com</i>
+            </div> 
         </section>
     </main>
 
