Added background color + positions of icons and text for next steps section

--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
             </div>
         </section>
         <section class="full-screen" id="next">
-            <div>Next Steps</div>
+            <div class="next-title">Next Steps</div>
             <div>
-            <p>Thanks for dropping by! I'm currently looking for full-time opportunities as a front-end UI developer in Toronto. 
-            Let's chat about how we can work together. Connect with me on Linkedin or send me an email! </p>
+            <p>Thanks for dropping by! <br> I'm currently looking for full-time opportunities as a front-end UI developer in Toronto. 
+            <br>Let's chat about how we can work together. <br>Connect with me on Linkedin or send me an email! </p>
                 <a href="https://www.linkedin.com/in/steph-wan/"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://github.com/anotherwan"><i class="fab fa-github"></i></a>
-                <i class="fas fa-map-marker">Toronto, Canada</i>
-               <i class="fas fa-at">stephhwwan@gmail.com</i>
+                <a href="https://github.com/anotherwan"><i class="fab fa-github"></i></a><br>
+                <p><i class="fas fa-map-marker"></i>Toronto, Canada</p>
+                <p><i class="fas fa-at"></i>stephhwwan@gmail.com</p>
             </div> 
         </section>
     </main>
