--- a/index.html
+++ b/index.html
@@ -43,13 +43,8 @@
                     tephanie
                         <img class="w" src="img/sw_logo_w.png" width="40" />
                     an.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae metus ut mauris interdum elementum eu ac elit. 
-                    <!-- <div class="dot">
-                        <img src="img/sw_logo_dot.png" width="10" />
-                    </div> -->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae metus ut mauris interdum elementum eu ac elit. 
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae metus ut mauris interdum elementum eu ac elit. 
-                </div>
+                    <p>After completing Lighthouse Lab's immersive full-stack web development bootcamp last year, I've focused on improving my front-end development and UI/UX design skills through various freelance and contract work mostly with HTML, CSS, Javascript, and Wordpress. My passion for organization and efficiency guided me through 4 months of agile scrum and kanban project management experience at Rockets to the Moon. I'm striving to reflect that passion into modular code structures and visually stimulating, user-centric interfaces. Backed with a degree in communications and business administration, I'm an excellent communicator and a team player. If you're looking for a detail-oriented and quick learner, I'm currently looking to join a development team full-time! (Preferably not working on Wordpress and ideally working on Javascript and React!)</p>
+                    </div>
             </div>
         </section>
         <section class="full-screen" id="work">
@@ -106,6 +101,7 @@
             <br>Let's chat about how we can work together. <br>Connect with me on Linkedin or send me an email! </p>
                 <a href="https://www.linkedin.com/in/steph-wan/"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://github.com/anotherwan"><i class="fab fa-github"></i></a><br>
+                <a href="https://resume.creddle.io/resume/dzkbzk1oa9s">Resume</a>
                 <p><i class="fas fa-map-marker"></i>Toronto, Canada</p>
                 <p><i class="fas fa-at"></i>stephhwwan@gmail.com</p>
             </div> 
