added laptop images of work, changed story text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                     tephanie
                         <img class="w" src="img/sw_logo_w.png" width="40" />
                     an.</p>
-                    <p>After completing Lighthouse Lab's immersive full-stack web development bootcamp last year, I've focused on improving my front-end development and UI/UX design skills through various freelance and contract work mostly with HTML, CSS, Javascript, and Wordpress. My passion for organization and efficiency guided me through 4 months of agile scrum and kanban project management experience at Rockets to the Moon. I'm striving to reflect that passion into modular code structures and visually stimulating, user-centric interfaces. Backed with a degree in communications and business administration, I'm an excellent communicator and a team player. If you're looking for a detail-oriented and quick learner, I'm currently looking to join a development team full-time! (Preferably not working on Wordpress and ideally working on Javascript and React!)</p>
+                    <p>Welcome to my portfolio under construction! My goal is to eventually code this entire site without Wordpress (and its multitude of plugins), and frameworks (such as Bootstap and React). For now, I'm sticking to HTML, CSS, and vanilla JS, although I've also been learning GSAP (jQuery included), CSS animations, scroll magic, as well as Adobe Illustrator and Photoshop.</p>
+                    <p>After completing Lighthouse Lab's immersive full-stack web development bootcamp last year, I've focused on improving my front-end development and UI/UX design skills through various freelance and contract work mostly with HTML, CSS, Javascript, and Wordpress. I'm striving to reflect my passion for organization and efficiency into modular code structures and visually stimulating, user-centric interfaces.</p> 
                     </div>
             </div>
         </section>
@@ -51,15 +52,68 @@
             <div class="dev-title">
                 Development
             </div>
-            <div>
-                <a href="http://rocketstothemoon.com" target="_blank">
-                    <img src="img/rttm.png" width="500"  />
-                </a>
-                <div></div>
-                <a href="http://clearlifemagazine.com" target="_blank">
-                    <img src="img/clm_shop.png" width="500" />
-                </a>
+            <div class="slider" id="slider">
+                <div class="holder">
+                    <div class="slide" id="slide-0">
+                        <a href="http://rocketstothemoon.com" target="_blank" id="rttm-a">
+                           Rockets to the Moon
+                        </a>
+                        <p class="proj-title">Rockets to the Moon <br><span class="proj-descr"> - Digital Agency - </span><br>
+                        <span><i class="devicon-wordpress-plain-wordmark"></i></span>
+                        <span><i class="devicon-html5-plain-wordmark"></i></span>
+                        <span><i class="devicon-css3-plain-wordmark"></i></span>
+                        <span><i class="devicon-javascript-plain"></i></span>
+                        </p>
+                    </div>
+                    <div class="slide" id="slide-1">
+                        <a href="http://clearlifeinc.com" target="_blank" id="clm-a">
+                        </a>
+                        <p class="proj-title">Clear Life Inc. <br><span class="proj-descr">- Publication/E-commerce - </span><br>
+                        <span><i class="devicon-wordpress-plain-wordmark"></i></span>
+                        <span><i class="devicon-html5-plain-wordmark"></i></span>
+                        <span><i class="devicon-css3-plain-wordmark"></i></span>
+                        <span><i class="devicon-php-plain"></i></span>
+                        <span><i class="devicon-javascript-plain"></i></span>
+                        </p>
+                    </div>
+                    <div class="slide" id="slide-2">
+                        <a href="http://ponderosabilling.com" target="_blank" id="ponderosa-a">
+                        </a>
+                        <p class="proj-title">Ponderosa Billing <br><span class="proj-descr"> - Medical Billing Service - </span><br>
+                        <span><i class="devicon-wordpress-plain-wordmark"></i></span>
+                        <span><i class="devicon-html5-plain-wordmark"></i></span>
+                        <span><i class="devicon-css3-plain-wordmark"></i></span>
+                        </p>
+                    </div>
+                    <div class="slide" id="slide-3">
+                        <a href="http://2bwired.ca" target="_blank" id="twobwired-a">
+                        </a>
+                        <p class="proj-title">2B Wired <br><span class="proj-descr">- Local Electrician - </span>
+                            <br>
+                        <span><i class="devicon-wordpress-plain-wordmark"></i></span>
+                        <span><i class="devicon-html5-plain-wordmark"></i></span>
+                        <span><i class="devicon-css3-plain-wordmark"></i></span>
+                        </p>
+                    </div>
+                    <div class="slide" id="slide-4">
+                        <a href="http://tcnm.ca" target="_blank" id="tcnm-a">
+                        </a>
+                        <p class="proj-title">Toronto Centre For Naturopathic Medicine - <br>
+                        <span><i class="devicon-wordpress-plain-wordmark"></i></span>
+                        <span><i class="devicon-html5-plain-wordmark"></i></span>
+                        <span><i class="devicon-css3-plain-wordmark"></i></span>
+                        <span><i class="devicon-php-plain"></i></span>
+                        </p>
+                    </div>
+                </div>
             </div>
+            <nav class="slider-nav">
+                <a href="#slide-0" class="active">R++M</a> 
+                <a href="#slide-1">Clear Life Inc</a> 
+                <a href="#slide-2">Ponderosa Billing</a> 
+                <a href="#slide-3">2B Wired</a>
+                <a href="#slide-4">TCNM</a> 
+            </nav>
         </section>
         <section class="full-screen" id="abilities">
             <div class="abilities-title">Abilities</div>
@@ -97,13 +151,14 @@
         <section class="full-screen" id="next">
             <div class="next-title">Next Steps</div>
             <div>
-            <p>Thanks for dropping by! <br> I'm currently looking for full-time opportunities as a front-end UI developer in Toronto. 
+            <p>Thanks for dropping by! <br> I'm currently looking for full-time opportunities as a front-end developer or digital project manager in Toronto. 
             <br>Let's chat about how we can work together. <br>Connect with me on Linkedin or send me an email! </p>
-                <a href="https://www.linkedin.com/in/steph-wan/"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://github.com/anotherwan"><i class="fab fa-github"></i></a><br>
-                <a href="https://resume.creddle.io/resume/dzkbzk1oa9s">Resume</a>
-                <p><i class="fas fa-map-marker"></i>Toronto, Canada</p>
-                <p><i class="fas fa-at"></i>stephhwwan@gmail.com</p>
+                <a href="https://www.linkedin.com/in/steph-wan/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/anotherwan" target="_blank"><i class="fab fa-github"></i></a><br>
+                <a href="https://resume.creddle.io/resume/dzkbzk1oa9s" target="_blank">Resume</a>
+                <br>
+                <span><i class="fas fa-map-marker"></i>Toronto, Canada</span><br>
+                <span><i class="fas fa-at"></i>stephhwwan@gmail.com</span>
             </div> 
         </section>
     </main>
