changed all content to V2 with video content

--- a/index.html
+++ b/index.html
@@ -1,174 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <title>Steph Wan Codes</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" type="text/css" href="/styles/fonts/fonts.css" />
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-</head>
-<body>
-    <header role="banner">
-        <div class="header-container">
-            <nav class="anchor-nav" role='navigation'>
-                <a href="#greetings" id="greetings-anchor"></a>
-                <a href="#story" id="story-anchor">story</a>
-                <a href="#work" id="work-anchor">work</a>
-                <a href="#abilities" id="abilities-anchor">abilities</a>
-                <a href="#next" id="next-anchor">next steps</a>
-            </nav>
-            <div class="sw">
-                <img src="img/sw_logo_sw.png" width="120">
-            </div>
-            <div class="dot">
-                <img src="img/sw_logo_dot.png" width="15" />
-            </div>
+    <head>
+        <title>Interactive Video</title>
+        <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+        <video id="myVideo" width="500" height="400" controls muted> 
+            <source src="videos/cali1.mp4" type="video/mp4">
+        </video>
+        <canvas id="myCanvas" width ="500" height="400"> 
 
-        </div>
-    </header>
-    <main class="full-screen" id="greetings" role="main">
-        <section class="full-screen" id="start">
-            <div id="greet-title">Greetings
-                <br>
-            <img class="photo" src="img/photo.JPG" width="180">
-            <div><span class="down-arrow">↓</span></div>
-        </div>
-        </section>
-        <section class="full-screen" id="story">
-            <div id="p-container">
-                <div class="arrow-up"></div>
-                <div id="summary-quote">
-                    <p class="typewriter"> Hi! I'm
-                        <img class="s" src="img/sw_logo_s.png" width="25" />
-                    tephanie
-                        <img class="w" src="img/sw_logo_w.png" width="40" />
-                    an.</p>
-                    <p>Welcome to my portfolio under construction! My goal is to eventually code this entire site without Wordpress (and its multitude of plugins), and frameworks (such as Bootstap and React). For now, I'm sticking to HTML, CSS, and vanilla JS, although I've also been learning GSAP (jQuery included), CSS animations, scroll magic, as well as Adobe Illustrator and Photoshop.</p>
-                    <p>After completing Lighthouse Lab's immersive full-stack web development bootcamp last year, I've focused on improving my front-end development and UI/UX design skills through various freelance and contract work mostly with HTML, CSS, Javascript, and Wordpress. I'm striving to reflect my passion for organization and efficiency into modular code structures and visually stimulating, user-centric interfaces.</p> 
-                    </div>
-            </div>
-        </section>
-        <section class="full-screen" id="work">
-            <div class="dev-title">
-                Development
-            </div>
-            <div class="slider" id="slider">
-                <div class="holder">
-                    <div class="slide" id="slide-0">
-                        <a href="http://rocketstothemoon.com" target="_blank" id="rttm-a">
-                           Rockets to the Moon
-                        </a>
-                        <p class="proj-title">Rockets to the Moon <br><span class="proj-descr"> - Digital Agency - </span><br>
-                        <span><i class="devicon-wordpress-plain-wordmark"></i></span>
-                        <span><i class="devicon-html5-plain-wordmark"></i></span>
-                        <span><i class="devicon-css3-plain-wordmark"></i></span>
-                        <span><i class="devicon-javascript-plain"></i></span>
-                        </p>
-                    </div>
-                    <div class="slide" id="slide-1">
-                        <a href="http://clearlifeinc.com" target="_blank" id="clm-a">
-                        </a>
-                        <p class="proj-title">Clear Life Inc. <br><span class="proj-descr">- Publication/E-commerce - </span><br>
-                        <span><i class="devicon-wordpress-plain-wordmark"></i></span>
-                        <span><i class="devicon-html5-plain-wordmark"></i></span>
-                        <span><i class="devicon-css3-plain-wordmark"></i></span>
-                        <span><i class="devicon-php-plain"></i></span>
-                        <span><i class="devicon-javascript-plain"></i></span>
-                        </p>
-                    </div>
-                    <div class="slide" id="slide-2">
-                        <a href="http://ponderosabilling.com" target="_blank" id="ponderosa-a">
-                        </a>
-                        <p class="proj-title">Ponderosa Billing <br><span class="proj-descr"> - Medical Billing Service - </span><br>
-                        <span><i class="devicon-wordpress-plain-wordmark"></i></span>
-                        <span><i class="devicon-html5-plain-wordmark"></i></span>
-                        <span><i class="devicon-css3-plain-wordmark"></i></span>
-                        </p>
-                    </div>
-                    <div class="slide" id="slide-3">
-                        <a href="http://2bwired.ca" target="_blank" id="twobwired-a">
-                        </a>
-                        <p class="proj-title">2B Wired <br><span class="proj-descr">- Local Electrician - </span>
-                            <br>
-                        <span><i class="devicon-wordpress-plain-wordmark"></i></span>
-                        <span><i class="devicon-html5-plain-wordmark"></i></span>
-                        <span><i class="devicon-css3-plain-wordmark"></i></span>
-                        </p>
-                    </div>
-                    <div class="slide" id="slide-4">
-                        <a href="http://tcnm.ca" target="_blank" id="tcnm-a">
-                        </a>
-                        <p class="proj-title">Toronto Centre For Naturopathic Medicine - <br>
-                        <span><i class="devicon-wordpress-plain-wordmark"></i></span>
-                        <span><i class="devicon-html5-plain-wordmark"></i></span>
-                        <span><i class="devicon-css3-plain-wordmark"></i></span>
-                        <span><i class="devicon-php-plain"></i></span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <nav class="slider-nav">
-                <a href="#slide-0" class="active">R++M</a> 
-                <a href="#slide-1">Clear Life Inc</a> 
-                <a href="#slide-2">Ponderosa Billing</a> 
-                <a href="#slide-3">2B Wired</a>
-                <a href="#slide-4">TCNM</a> 
-            </nav>
-        </section>
-        <section class="full-screen" id="abilities">
-            <div class="abilities-title">Abilities</div>
-            <div class="devicons">
-                <h3 class="toolbox">Toolbox</h3>
-                    <i class="devicon-html5-plain-wordmark"></i>
-                    <i class="devicon-css3-plain-wordmark"></i>
-                    <i class="devicon-bootstrap-plain-wordmark"></i>
-                    <i class="devicon-foundation-plain-wordmark"></i>
-                    <i class="devicon-sass-original"></i>
-                    <i class="devicon-javascript-plain"></i>
-                    <i class="devicon-jquery-plain-wordmark"></i>
-                    <br>
-                    <i class="devicon-nodejs-plain-wordmark"></i>
-                    <i class="devicon-express-original-wordmark"></i>
-                    <i class="devicon-react-original-wordmark"></i>
-                    
-                    <i class="devicon-git-plain-wordmark"></i>
-                    <i class="devicon-github-plain-wordmark"></i>
-                    <i class="devicon-heroku-original-wordmark"></i>
-                    
-                    <i class="devicon-wordpress-plain-wordmark"></i>
-                    <i class="devicon-php-plain"></i>
-                <h3 class="db">Databases</h3>
-                    <i class="devicon-mongodb-plain-wordmark"></i>
-                    <i class="devicon-postgresql-plain-wordmark"></i>
-                <h3 class="db">OS</h3>
-                    <i class="devicon-linux-plain"></i>
-                    <i class="devicon-ubuntu-plain-wordmark"></i>
-                <h3 class="db">Adobe Suite</h3>
-                    <i class="devicon-illustrator-line"></i>
-                    <i class="devicon-photoshop-line"></i>
-            </div>
-        </section>
-        <section class="full-screen" id="next">
-            <div class="next-title">Next Steps</div>
-            <div>
-            <p>Thanks for dropping by! <br> I'm currently looking for full-time opportunities as a front-end developer or digital project manager in Toronto. 
-            <br>Let's chat about how we can work together. <br>Connect with me on Linkedin or send me an email! </p>
-                <a href="https://www.linkedin.com/in/steph-wan/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://github.com/anotherwan" target="_blank"><i class="fab fa-github"></i></a><br>
-                <a href="https://resume.creddle.io/resume/dzkbzk1oa9s" target="_blank">Resume</a>
-                <br>
-                <span><i class="fas fa-map-marker"></i>Toronto, Canada</span><br>
-                <span><i class="fas fa-at"></i>stephhwwan@gmail.com</span>
-            </div> 
-        </section>
-    </main>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/plugins/CSSPlugin.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/plugins/ScrollToPlugin.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
-    <script src="main.js"></script>
-</body>
+        </canvas>
+    </head>
+    <body>
+    </body>
+     <script type="text/javascript" src="myScript.js"></script>
 </html>
